--- a/main.css
+++ b/main.css
@@ -2,4 +2,39 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+main {
+  height: 100vh;
+  background-color: rgb(252, 252, 252);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.container {
+  height: 50vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 80px;
+}
+
+h1 {
+  font-size: 25px;
+  font-weight: normal;
+}
+
+p {
+  font-size: 18px;
+}
+
+.fa-cloud-rain,
+.fa-sun {
+  color: rgb(92, 92, 92);
+  margin: 20px 0;
 }
