--- a/main.css
+++ b/main.css
@@ -11,12 +11,41 @@ main {
   background-color: rgb(252, 252, 252);
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-direction: column;
 }
 
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 10vh;
+  width: 50%;
+}
+
+button {
+  height: 30px;
+  width: 150px;
+  border: none;
+  box-shadow: 4px 4px 5px 1px rgba(138, 138, 138, 0.75);
+  border-radius: 10px;
+  cursor: pointer;
+  color: rgb(92, 92, 92);
+}
+
+.active {
+  box-shadow: 4px 4px 5px 1px rgba(36, 36, 36, 0.75);
+  color: black;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .container {
-  height: 50vh;
+  height: 30vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,17 +53,6 @@ main {
   font-size: 80px;
 }
 
-h1 {
-  font-size: 25px;
-  font-weight: normal;
-}
-
 p {
   font-size: 18px;
-}
-
-.fa-cloud-rain,
-.fa-sun {
-  color: rgb(92, 92, 92);
-  margin: 20px 0;
 }
