--- a/main.css
+++ b/main.css
@@ -27,6 +27,26 @@ main {
   padding: 0 10px;
 }
 
+.flex {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 4px 4px 5px 1px rgba(138, 138, 138, 0.75);
+  border-radius: 10px;
+  width: 20vw;
+  padding: 20px 10px;
+}
+
+.flex button {
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  /* width: 50px;
+  height: 50px; */
+  font-size: 20px;
+  cursor: pointer;
+}
+
 .info {
   display: flex;
   flex-direction: column;
@@ -42,6 +62,16 @@ main {
   font-size: 80px;
 }
 
-p {
-  font-size: 18px;
+.temperature {
+  font-size: 50px;
+  font-weight: 300;
+}
+
+.date {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.hide {
+  opacity: 0;
 }
